# skeleton-ptb

./: .pre-commit-config.yaml  .ruff.toml  Dockerfile  manage.py  pyproject.toml  run-mypy.sh  settings.py
apps/common/: db.py  logs.py  utils.py
apps/common/domain/: model.py
apps/common/repositories/: repository.py
apps/telegram_bot/: __init__.py  app.py
apps/telegram_bot/core/: context.py  custom_handlers.py  exception.py  routers.py
apps/telegram_bot/tg/elements/: base.py  buttons.py  common.py  keyboards.py  messages.py  utils.py
apps/telegram_bot/tg/handlers/: common.py
